--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div id="tp" class="ui fluid contianer">
   <div id="holder" class="ui grid">
-    <i  class="linkedin huge icon"></i>
-    <i class="github huge icon"></i>
+    <a href="https://www.linkedin.com/in/tahmid-farhan-b168391a0/" target="new" >  <i  class="linkedin huge icon link" ></i></a>
+    <a href="https://github.com/Tahmid79" target="new" ><i class="github huge icon link"></i></a>
   </div>
 </div>
 
