--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,14 +10,14 @@
 
     <div class="row two column">
 
-      <div class="center aligned column">
+      <div class="column">
 
         <div  id="crd" class="ui card">
           <div class="image">
             <img src="assets/header/face2.jpg">
           </div>
           <div class="content">
-            <div  class="header" href="#">Tahmid Farhan</div>
+            <div  class="header">Tahmid Farhan</div>
             <div class="meta">
               <h4>Software Developer</h4>
             </div>
@@ -27,15 +27,18 @@
       </div>
 
 
-      <div class="column">
+      <div class="ui divider"></div>
+
+      <div class="large screen only column">
         <h1 id="wlc" style="color: white">Welcome To My Site</h1>
       </div>
 
     </div>
 
+
     </div>
 
-  </div>
+</div>
 
 <div id="bt" class="ui fluid contianer">
 
