--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -9,22 +9,13 @@
 
   <div class="ui grid">
 
-    <div class="row five column">
+    <div class="row">
 
-      <div class="column" *ngFor="let number of numbers" style="padding: 30px">
 
-        <!--
-        <div class="ui  circular segment">
-          <h2 class="ui header">
-            Buy Now
-            <div class="sub header">$10.99</div>
-          </h2>
+        <div id="circle" class="ui  circular segment"  *ngFor="let number of numbers">
+
         </div>
-        -->
 
-        <img class="ui small circular image" src="assets/header/sqlite.jpg">
-
-      </div>
 
 
     </div>
@@ -32,3 +23,8 @@
 
   </div>
 </div>
+
+
+<!--
+<img class="ui image" src="assets/header/boxes.jpg">
+-->
