--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -9,19 +9,36 @@
 
   <div class="ui grid">
 
-    <div class="row">
+    <div class="row computer only">
 
 
         <div id="circle" class="ui  circular segment"  *ngFor="let number of numbers">
 
         </div>
 
-
-
     </div>
 
 
   </div>
+
+  <div class="ui mobile only grid" style="display: flex; overflow-x:  scroll; overflow-y: hidden;">
+
+
+       <div #gallery  id="fbox" class="row" style="display: flex ; overflow-x:scroll"  >
+
+
+       <div id="kr" class="ui small circular segment" *ngFor="let number of numbers" >
+
+
+      </div>
+
+
+
+
+    </div>
+
+  </div>
+
 </div>
 
 
