--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -7,10 +7,9 @@
     </div>
   </div>
 
-  <div class="ui grid">
+  <div class="ui stackable grid container">
 
-    <div class="row computer only">
-
+    <div class="row">
 
         <div id="circle" class="ui  circular segment"  *ngFor="let number of numbers">
 
@@ -18,24 +17,6 @@
 
     </div>
 
-
-  </div>
-
-  <div class="ui mobile only grid" style="display: flex; overflow-x:  scroll; overflow-y: hidden;">
-
-
-       <div #gallery  id="fbox" class="row" style="display: flex ; overflow-x:scroll"  >
-
-
-       <div id="kr" class="ui small circular segment" *ngFor="let number of numbers" >
-
-
-      </div>
-
-
-
-
-    </div>
 
   </div>
 
