--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -7,11 +7,11 @@
     </div>
   </div>
 
-  <div class="ui stackable grid container">
+  <div class="ui stackable grid">
 
     <div class="row">
 
-        <div id="circle" class="ui  circular segment"  *ngFor="let number of numbers">
+        <div id="circle" class="ui circular segment"  *ngFor="let number of numbers">
 
         </div>
 
@@ -26,3 +26,29 @@
 <!--
 <img class="ui image" src="assets/header/boxes.jpg">
 -->
+
+
+<!--
+
+
+  <div class="ui mobile only stackable grid" style="display: flex; overflow-x:  scroll; overflow-y: hidden;">
+
+
+       <div #gallery  id="fbox" class="row" style="display: flex ; overflow-x:scroll"  >
+
+
+       <div id="kr" class="ui small circular segment" *ngFor="let number of numbers" >
+
+
+      </div>
+
+
+
+
+    </div>
+
+  </div>
+
+
+
+ -->
