--- a/src/app/skills/skills.component.css
+++ b/src/app/skills/skills.component.css
@@ -38,6 +38,14 @@
 }
 
 
+@media screen and (max-width: 480px) and (min-width: 320px) {
+  #cirlce {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+
 
 .ui.small.circular.image{
   width: 200px;
