--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
 
         <div  id="crd" class="ui card">
           <div class="image">
-            <img src="assets/header/face2.jpg">
+            <img src="assets/header/fnt.jpg">
           </div>
           <div class="content">
             <div  class="header">Tahmid Farhan</div>
