--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -11,7 +11,8 @@
 
     <div class="row">
 
-        <div id="circle" class="ui circular segment"  *ngFor="let number of numbers">
+        <div id="circle" class="ui circular segment"  *ngFor="let skill of skills; let i = index"
+         [style.background-image] = "skill.b1" >
 
         </div>
 
@@ -23,8 +24,13 @@
 </div>
 
 
+
+
+
 <!--
 <img class="ui image" src="assets/header/boxes.jpg">
+<div [style.background-image]="'url(&quot;' + photo + '&quot;)'"></div>
+ [style.background-image] = "'url(assets/stack/rct.jpg)'" >
 -->
 
 
