--- a/src/app/projects/general/general.component.html
+++ b/src/app/projects/general/general.component.html
@@ -36,11 +36,11 @@
     <div #gallery  id="fbox" class="row"  >
 
 
-      <div id="crd" class="card" *ngFor="let number of numbers" >
+      <div id="crd" class="card" *ngFor="let project of projects" >
         <div class="ui segment divided">
 
           <div  id="imghold" class="container">
-              <img class="" src="assets/header/boxes.jpg">
+              <img class="" [src]="'assets/projects/' + project.url">
           </div>
 
           <div class="ui divider"></div>
@@ -48,9 +48,14 @@
           <div class="row">
 
             <div class="container">
-              <p style="font-size: 1.3em" >E05  8  Jul   , 12:21 PM</p>
-              <p style="font-size: 1.3em" ><b>Mind Matters with Dr Shyam Bhat (Psychiatrist Integrative Medicine Specialist)</b></p>
+              <p style="font-size: 1.3em" >
+                {{  project.name  }}
+              </p>
+              <p style="font-size: 1.3em" >
+                <b>{{ project.des }}</b>
+              </p>
             </div>
+
           </div>
         </div>
       </div>
@@ -60,6 +65,15 @@
 
     </div>
 
-
-
 </div>
+
+
+
+<!--
+
+
+  <div class="container">
+              <p style="font-size: 1.3em" >E05  8  Jul   , 12:21 PM</p>
+              <p style="font-size: 1.3em" ><b>Mind Matters with Dr Shyam Bhat (Psychiatrist Integrative Medicine Specialist)</b></p>
+            </div>
+-->
