--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,6 +8,8 @@
 <div id="hd" class="ui fluid container">
   <div class="ui grid">
 
+    <div class="row"></div>
+
     <div class="row two column">
 
       <div class="column">
@@ -39,6 +41,9 @@
     </div>
 
 </div>
+
+
+
 
 <div id="bt" class="ui fluid contianer">
 
