--- a/src/app/projects/general/general.component.html
+++ b/src/app/projects/general/general.component.html
@@ -31,7 +31,7 @@
 
 
 
-
+      <br/>
 
     <div #gallery  id="fbox" class="row"  >
 
@@ -49,10 +49,10 @@
 
             <div class="container">
               <p style="font-size: 1.3em" >
-                {{  project.name  }}
+                <b>{{  project.name  }}</b>
               </p>
-              <p style="font-size: 1.3em" >
-                <b>{{ project.des }}</b>
+              <p style="font-size: 1.4em" >
+                {{ project.des }}
               </p>
             </div>
 
